# GLFW_GLAD_GLM_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/modules/: FindGLFW3.cmake
config/: PathConfig.h.in
include/: Callbacks.h  Constants.h  DebugUtils.h
include/glad/: glad.h
my_gdb/: .gdbinit
my_gdb/glm/: Makefile
src/: Callbacks.cpp  main.cpp
